# mcp-server-elasticsearch-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  config.env.example  datadog-mcp.code-workspace  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
datadog_mcp/: __init__.py  __main__.py  auth.py  config.py  patches.py  server.py
datadog_mcp/specs/: README.md
elasticsearch_mcp/: __init__.py  __main__.py  auth.py  config.py  optimized_tools.py  patches.py  server.py
elasticsearch_mcp/specs/: elasticsearch-byviz.yaml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  conftest.py  test_auth.py  test_config.py
